Bug info about slider overflow other sliders and links not clickable closes #1006

--- a/app/assets/stylesheets/slider.sass
+++ b/app/assets/stylesheets/slider.sass
@@ -98,6 +98,7 @@ $slider-box-height: 22px
     border: 1px solid white
     display: none
     margin: -1px
+    overflow: auto
 
   .info
     background: #eee
